// This file describes the protocol to communicate with Todoer server.
syntax = "proto3";

option go_package = "github.com/vitorarins/todoer/pb";

package todoer;

service Todoer {
  // TodoList
  rpc CreateTodoList (CreateTodoListRequest) returns (CreateTodoListReply) {}
  rpc GetAllTodoLists (Empty) returns (GetAllTodoListsReply) {}
  rpc GetTodoList (GetTodoListRequest) returns (GetTodoListReply) {}
  rpc UpdateTodoList (UpdateTodoListRequest) returns (Empty) {}
  rpc DeleteTodoList (DeleteTodoListRequest) returns (Empty) {}
  // Todo
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoReply) {}
  rpc GetTodosByList (GetTodosByListRequest) returns (GetTodosByListReply) {}
  rpc GetTodo (GetTodoRequest) returns (GetTodoReply) {}
  rpc UpdateTodo (UpdateTodoRequest) returns (Empty) {}
  rpc DeleteTodo (DeleteTodoRequest) returns (Empty) {}
}

message Empty {}

// TodoList

message TodoList {
  uint32 id = 1;
  string title = 2;
}

message CreateTodoListRequest {
  string title = 1;
}

message CreateTodoListReply {
  TodoList todo_list = 1;
}

message GetAllTodoListsReply {
  repeated TodoList todo_lists = 1;
}

message GetTodoListRequest {
  uint32 id = 1;
}

message GetTodoListReply {
  TodoList todo_list = 1;
}

message UpdateTodoListRequest {
  TodoList todo_list = 1;
}

message DeleteTodoListRequest {
  uint32 id = 1;
}

// Todo

message Todo {
  uint32 id = 1;
  uint32 list_id = 2;
  string description = 3;
  string comments = 4;
  string due_date = 5;
  repeated string labels = 6;
  bool done = 7;
}

message CreateTodoRequest {
  uint32 list_id = 1;
  string description = 2;
  string comments = 4;
  string due_date = 5;
  repeated string labels = 6;
  bool done = 7;
}

message CreateTodoReply {
  Todo todo = 1;
}

message GetTodosByListRequest {
  uint32 list_id = 1;
}

message GetTodosByListReply {
  repeated Todo todos = 1;
}

message GetTodoRequest {
  uint32 id = 1;
}

message GetTodoReply {
  Todo todo = 1;
}

message UpdateTodoRequest {
  Todo todo = 1;
}

message DeleteTodoRequest {
  uint32 id = 1;
  uint32 list_id = 2;
}
